# modern_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithms_stl.cpp  apply_clang_formatter  clang_formatter.sh  custom_script.sh  main.cpp
cpp_linkings/: CMakeLists.txt
cpp_linkings/dependent/: CMakeLists.txt
cpp_linkings/dependent_and_service/dependent/: CMakeLists.txt  main.cpp
cpp_linkings/service/: service_in_lib.cpp  service_in_lib.h
design_patterns/: CMakeLists.txt
design_patterns/composition/: CMakeLists.txt  Main.cpp  Singleton.cpp  composition.h  main.cpp
exercises/: CMakeLists.txt
exercises/LSP/: CMakeLists.txt  main.cpp
exercises/casting/: CMakeLists.txt  main.cpp
exercises/disable_exceptions/: CMakeLists.txt  main.cpp
exercises/do_not_push/: CMakeLists.txt  main.cpp
exercises/exercise/: CMakeLists.txt  main.cpp
exercises/extern_c/: CMakeLists.txt
exercises/overload/: CMakeLists.txt  main.cpp
exercises/reinterpret_cast/: CMakeLists.txt  casting.cpp
multithreading/: CMakeLists.txt
multithreading/basic_threading/: CMakeLists.txt  main.cpp
multithreading/callable_objects/: CMakeLists.txt  main.cpp
multithreading/conditional_variable/: CMakeLists.txt  main.cpp
multithreading/data_race_and_mutex/: CMakeLists.txt  main.cpp
multithreading/deadlock/: CMakeLists.txt  main.cpp
multithreading/future_promise_async/: CMakeLists.txt  main.cpp
multithreading/packaged_task/: CMakeLists.txt  main.cpp
multithreading/thread_Management/: CMakeLists.txt  main.cpp
multithreading/unique_lock_and_lazy_initialization/: CMakeLists.txt  main.cpp
solid/: CMakeLists.txt
solid/DIP/: CMakeLists.txt  dip.cpp
solid/ISP/: CMakeLists.txt  Printer_scanner.h  Xerox_work_center.h  conan_printer.cpp  conan_printer.h  fax.h  isp.cpp  print.h  printer_scanner.cpp  printer_scanner.h  scan.h  xerox_work_center.cpp  xerox_work_center.h
solid/LSP/: CMakeLists.txt  lsp.cpp  racing_car_lsp.cpp  racing_car_lsp.h
solid/OCP/: CMakeLists.txt  ocp.cpp
solid/SRP/: CMakeLists.txt  srp.cpp  student.cpp  student.h  student_db.cpp  student_db.h
src/: CMakeLists.txt
src/extern_c/: main.cpp
src/lvalue_rvalue/: CMakeLists.txt  main.cpp
src/move_semantics/: CMakeLists.txt  move_semantics.cpp
src_cpp_03/: CMakeLists.txt
src_cpp_03/casting/: CMakeLists.txt  main.cpp
src_cpp_03/disable_exceptions/: main.cpp
src_cpp_03/do_not_push/: main.cpp
src_cpp_03/extern_c/: CMakeLists.txt  one_c_file.c
src_cpp_03/overload/: main.cpp
src_cpp_03/reinterpret_cast/: casting.cpp
src_cpp_03/virtuals/: CMakeLists.txt  main.cpp
src_cpp_11/: CMakeLists.txt  compiler_generated_functions.md
src_cpp_11/about_array/: CMakeLists.txt  main.cpp
src_cpp_11/about_const/: CMakeLists.txt  main.cpp
src_cpp_11/crtp/: CMakeLists.txt  main.cpp
src_cpp_11/dynamic_pointer_casting/: CMakeLists.txt  move_semantics.cpp
src_cpp_11/extern_c/: main.cpp  one_c_file.h
src_cpp_11/iterator_in_cpp/: CMakeLists.txt  a.out  main.cpp
src_cpp_11/lambda_capture_and_std_function/: CMakeLists.txt  main.cpp
src_cpp_11/lvalue_rvalue/: CMakeLists.txt  main.cpp
src_cpp_11/miscellaneous_feature/: CMakeLists.txt  main.cpp
src_cpp_11/move_semantics/: CMakeLists.txt  move_semantics.cpp
src_cpp_11/move_vector/: CMakeLists.txt  main.cpp
src_cpp_11/new_feature_in_cpp11/: CMakeLists.txt  main.cpp
src_cpp_11/operator_overloading/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
src_cpp_11/perfect_forwarding/: CMakeLists.txt  main.cpp
src_cpp_11/raii_for_pointers/: CMakeLists.txt  Entity.cpp  Entity.h  main.cpp
src_cpp_11/resource_managing_class/: CMakeLists.txt  main.cpp
src_cpp_11/rule_of_five/: CMakeLists.txt  main.cpp
src_cpp_11/self_assignment_in_copy_constructor/: CMakeLists.txt  main.cpp
src_cpp_11/templates/: CMakeLists.txt  main.cpp
src_cpp_11/tuples/: CMakeLists.txt  main.cpp
src_cpp_11/virtual_and_smart_destructor/: CMakeLists.txt  main.cpp
src_cpp_11/weak_pointers/: CMakeLists.txt  main.cpp
src_cpp_11_14/: CMakeLists.txt
src_cpp_11_14/extern_c/: CMakeLists.txt  one_c_file.c
src_cpp_14/: CMakeLists.txt
src_cpp_17/: CMakeLists.txt
src_cpp_17/about_string_view/: CMakeLists.txt  about_string_view.cpp
src_cpp_17/lambda/: CMakeLists.txt  main.cpp
src_cpp_17/nested_namespace/: CMakeLists.txt  nested_namespace.cpp
src_cpp_17/std_optional/: CMakeLists.txt  example.txt  std_optional.cpp
src_cpp_17/std_variant/: CMakeLists.txt  example.txt  std_variant.cpp
src_cpp_17/structure_binding/: CMakeLists.txt  structure_binding.cpp
src_cpp_17/template_argument_deduction/: CMakeLists.txt  main.cpp  template_argument_deduction.cpp  template_argument_deduction.h
src_cpp_17/variable_declaration_in_if/: CMakeLists.txt  main.cpp
src_cpp_20/: CMakeLists.txt
src_cpp_20/modules_in_cpp/: CMakeLists.txt
stl_algorithms/: CMakeLists.txt
(+33 files in other folders)
