cmake_minimum_required(VERSION 3.19)
project(modern_cpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_INSTALL_PREFIX  ${CMAKE_SOURCE_DIR}/build/debug)
add_subdirectory(src_cpp_11)
add_subdirectory(src_cpp_17)
add_subdirectory(design_patterns)
add_subdirectory(stl_algorithms)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
