add_subdirectory(lvalue_rvalue)
add_subdirectory(move_semantics)
add_subdirectory(raii_for_pointers)
add_subdirectory(extern_c)
add_subdirectory(crtp)
add_subdirectory(about_array)
add_subdirectory(about_const)
add_subdirectory(virtual_and_smart_destructor)
add_subdirectory(self_assignment_in_copy_constructor)