add_subdirectory(move_semantics)
add_subdirectory(raii_for_pointers)
add_subdirectory(crtp)
add_subdirectory(about_array)
add_subdirectory(about_const)
add_subdirectory(virtual_and_smart_destructor)
add_subdirectory(self_assignment_in_copy_constructor)
add_subdirectory(new_feature_in_cpp11)
add_subdirectory(move_vector)
add_subdirectory(perfect_forwarding)
add_subdirectory(dynamic_pointer_casting)
add_subdirectory(weak_pointers)
add_subdirectory(resource_managing_class)
add_subdirectory(tuples)
add_subdirectory(operator_overloading)
add_subdirectory(miscellaneous_feature)
add_subdirectory(lambda_capture_and_std_function)
add_subdirectory(rule_of_five)
add_subdirectory(templates)
add_subdirectory(iterator_in_cpp)