set(CMAKE_CXX_STANDARD 17)
add_subdirectory(structure_binding)
add_subdirectory(nested_namespace)
add_subdirectory(template_argument_deduction)
add_subdirectory(variable_declaration_in_if)
add_subdirectory(std_optional)
add_subdirectory(std_variant)
add_subdirectory(about_string_view)
add_subdirectory(lambda)
